--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -15,6 +15,7 @@
           crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="/css/admin.css">
+        <link rel="stylesheet" href="style.css">
       </head>
 <body>
     <header>
