--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         </ul>
         <!-- <a href="" class="action-btn">Login</a> -->
-        <button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo">Login</button>
+        <button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo" id="loginBtn">Login</button>
+        <span id="nombreuser" style="display: none;"></span>
+        <button id="logoutBtn" class="action-btn" style="display: none;">Logout</button>
         <div class="toggle-btn" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i>
         </div>
@@ -213,7 +215,7 @@
 <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header cabeza-modal border-0">
+      <div class="modal-header cabeza-modal">
         <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Inicio de sesion</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
