Agrego funciones al boton solucionada

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="/pages/administracion.html">Administracion</a></li>
           <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         </ul>
-        <a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal">Login</a>
+        <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
         <div class="toggle-btn" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i>
         </div>
