--- a/pages/Carrito.html
+++ b/pages/Carrito.html
@@ -26,7 +26,7 @@
         <li><a href="/pages/administracion.html">Administracion</a></li>
         <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
       </ul>
-      <a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
+      <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
       <div class="toggle-btn" onclick="openMenu()">
         <i class="fa-solid fa-bars"></i>
       </div>
@@ -35,7 +35,7 @@
       <li><a href="">About us</a></li>
       <li><a href="/pages/administracion.html">Administracion</a></li>
       <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
-      <li><button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo">Login</button></li>
+      <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
     </div>
   </header>
       <main id="main">
