--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -14,9 +14,8 @@
           src="https://kit.fontawesome.com/82f0997eec.js"
           crossorigin="anonymous"
         ></script>
-        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="/css/admin.css">
-        
+        <link rel="stylesheet" href="style.css">
       </head>
 <body>
   <header>
@@ -27,7 +26,7 @@
         <li><a href="/pages/administracion.html">Administracion</a></li>
         <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
       </ul>
-      <a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
+      <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
       <div class="toggle-btn" onclick="openMenu()">
         <i class="fa-solid fa-bars"></i>
       </div>
@@ -36,11 +35,11 @@
       <li><a href="">About us</a></li>
       <li><a href="/pages/administracion.html">Administracion</a></li>
       <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
-      <li><button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo">Login</button></li>
+      <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
     </div>
   </header>
-    <main id="main">
-        <div class="container-fluid" >
+    <main>
+        <div class="container-fluid" id="main">
             <div class="row my-4">
                 <div class="col">
                     <h1 class="text-center text-white">Bienvenido administradores 📊</h1>
