--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         </ul>
         <!-- <a href="" class="action-btn">Login</a> -->
-        <button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo" id="loginBtn">Login</button>
+        <button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo">Login</button>
         <span id="nombreuser" style="display: none;"></span>
         <button id="logoutBtn" class="action-btn" style="display: none;">Logout</button>
         <div class="toggle-btn" onclick="openMenu()">
