Comienzo de armado de admin - user

--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -66,17 +66,35 @@
                                 </tr>
                             </thead>
                             <tbody id="cuerpo-tabla">
-                                <!-- <tr>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                </tr> -->
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
+            <div class="container-fluid my-3">
+              <div class="row">
+                  <div class="w-100 d-flex justify-content-between">
+                    <h3 class="text-white fw-bold mt-2">Lista de usuarios registrados 📝</h3>
+                  </div>
+                  <div class="col" id="contenedor-tabla-usuarios">
+                      <table class="table border-2">
+                          <thead>
+                              <tr>
+                                  <th>Nombre</th>
+                                  <th>Apellido</th>
+                                  <th>Username</th>
+                                  <th>Email</th>
+                                  <th>Admin</th>
+                                  <th></th>
+                              </tr>
+                          </thead>
+                          <tbody id="cuerpo-tabla-usuarios">
+                          </tbody>
+                      </table>
+                  </div>
+              </div>
+          </div>
+
         </div>
     </main>
     <footer class="text-light py-2">
