pagina de administracion con funcion para hacer admins

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       src="https://kit.fontawesome.com/82f0997eec.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="/img/logo/svg/TECH-PNG.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="navbar">
-        <div class="logo"> <a href="/index.html"><img src="/img/logo/logo-proyecto-2.png" alt="" /></a></div>
+        <div class="logo"> <a href="/index.html"><img src="/img/logo/TECH PNG.png" alt="" /></a></div>
         <ul class="links">
-          <li><a href="">Nosotros</a></li>
+          <li><a href="">Contactanos</a></li>
           <li><a href="/pages/administracion.html">Administracion</a></li>
           <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         </ul>
@@ -31,7 +32,7 @@
         </div>
       </div>
       <div class="dropdown_menu">
-        <li><a href="">About us</a></li>
+        <li><a href="">Contacto</a></li>
         <li><a href="/pages/administracion.html">Administracion</a></li>
         <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
@@ -151,7 +152,7 @@
           <div id="footerlogo">
             <a href="index.html"
               ><img
-                src="/img/logo/logo-proyecto-2.png"
+                src="/img/logo/TECH PNG.png"
                 alt="logo"
                 width="100"
             /></a>
@@ -180,8 +181,8 @@
           <span>&copy;Derechos reservados</span>
         </div>
         <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
-          <a  href="/Page/contacto.html"><h5  class = "infoFoot">Contactanos</h5> </a>
-          <a  href="/Page/error404.html"
+          <a  href="/"><h5  class = "infoFoot">Contactanos</h5> </a>
+          <a  href="/pages/Error404.html"
             ><h5  class = "infoFoot">Privacidad Y Legales</h5></a
           >
           <a class="foo" href="/Page/acercadenosotros.html"
@@ -280,12 +281,12 @@
           <div class="row mb-2">
             <div class="col">
               <label for="passw">Ingrese su contraseña</label>
-              <input type="password" id="password" required class="form-control" placeholder="**************">
+              <input type="password" id="password" required class="form-control" placeholder="">
               
             </div>
             <div class="col">
               <label for="passw">repita su contraseña</label>
-              <input type="password" required class="form-control" placeholder="**************">
+              <input type="password" required class="form-control" placeholder="">
             </div>
           </div>
           <div class="row">
