--- a/pages/Error404.html
+++ b/pages/Error404.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Error 404</title>
-  <link rel="stylesheet" href="/css/error404.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página de Error</title>
+    <link rel="stylesheet" href="/css/error404.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="container">
-            <figure>
-              <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3RkdTRvMm8xZTU0NjNldWNpN2toN25heXFlNzIyaW56cGI2amFkcSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/piL4e4WusrA4S0KODK/giphy.webp" alt="Error 404">
-              <button type="button">pene</button>
-            </figure>
-          </div>
+    <div class="error-container">
+        <h1 class="error-code">404</h1>
+        <h2 class="error-message">Página no encontrada</h2>
+        <p class="error-description">Lo sentimos, la página que estás buscando no existe.</p>
+        <a href="/index.html" class="back-home">Volver al inicio</a>
     </div>
 </body>
 </html>
