Hago funcion de pagina admin para banear usuarios

--- a/index.html
+++ b/index.html
@@ -24,13 +24,9 @@
         <ul class="links">
           <li><a href="">Contactanos</a></li>
           <li><a href="/pages/administracion.html">Administracion</a></li>
-          <li><a href="/pages/Carrito.html">Ver mi carrito</a> 
-            <div id="carrito-count"></div></li>
+          <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         </ul>
-        <!-- <a href="" class="action-btn">Login</a> -->
-        <button type="button" class="action-btn" data-bs-toggle="modal" data-bs-target="#modalLogin" data-bs-whatever="@mdo">Login</button>
-        <span id="nombreuser" style="display: none;"></span>
-        <button id="logoutBtn" class="action-btn" style="display: none;">Logout</button>
+        <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
         <div class="toggle-btn" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i>
         </div>
@@ -38,7 +34,7 @@
       <div class="dropdown_menu">
         <li><a href="">Contacto</a></li>
         <li><a href="/pages/administracion.html">Administracion</a></li>
-        <li><a href="/pages/Carrito.html">Ver mi carrito <span>0</span></a></li>
+        <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
         <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
       </div>
     </header>
