--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -84,7 +84,7 @@
                                   <th>Apellido</th>
                                   <th>Username</th>
                                   <th>Email</th>
-                                  <th>Admin?</th>
+                                  <th>Rol</th>
                                   <th></th>
                               </tr>
                           </thead>
