--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -39,6 +39,47 @@
         </div>
       </header>
     <main>
+        <div class="container   ">
+            <div class="row">
+                <div class="col">
+                        <div class="conteiner">
+                            <div class="row mb-2">
+                                <div class="col mt-3">
+                                    <h3 class="text-white text-center ">📞 Contactenos! 📞 </h3>
+                                    <hr style="color: white;" class="mb-3">
+                                    <h4 class="text-center text-white mb-3">Informacion General: 381-888-000</h4>
+                                    <h4 class="text-center text-white mb-3">Devoluciones: 381-000-000</h4>
+                                    <h3 class="text-white text-center mb-3">⚫ Deja tu opinion ⚫ </h3>
+                                    <hr style="color: white;">
+                                    <form action="">
+                                        <div class="row mb-3">
+                                            <div class="col">
+                                                <label for="nombre" class="text-white">Ingrese su nombre</label>
+                                                <input type="text" class="form-control" required placeholder="Ingrese su nombre" id="nombre">
+                                            </div>
+                                            <div class="col">
+                                                <label for="apellido" class="text-white">Ingrese su apellido</label>
+                                                <input type="text" class="form-control" required placeholder="Ingrese su apellido" id="apellido">
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col">
+                                                <label for="opinion" class="text-white">Deje su opinion aqui</label>
+                                                <textarea name="" id="opinion" class="form-control" placeholder="Escriba su opinion" cols="20" rows="5"></textarea>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="col mt-3">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1059174722645!2d-65.20974192556055!3d-26.836583276692632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1sca!2sar!4v1717370516018!5m2!1sca!2sar" width="600" height="500" style=" border-radius: 1rem; border:0 ;" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade" id="mapa-contacto">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+        </div>
 
     </main>
     <footer class="text-light py-2">
