--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -22,7 +22,7 @@
     <div class="navbar">
       <div class="logo"> <a href="/index.html"><img src="/img/logo/TECH PNG.png" alt="" /></a></div>
       <ul class="links">
-        <li><a href="">Contactanos</a></li>
+        <li><a href="/pages/Contacto.html">Contactanos</a></li>
         <li><a href="/pages/administracion.html">Administracion</a></li>
         <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
       </ul>
@@ -132,7 +132,7 @@
           <span>&copy;Derechos reservados</span>
         </div>
         <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
-          <a  href="/"><h5  class = "infoFoot">Contactanos</h5> </a>
+          <a  href="/pages/Contacto.html"><h5  class = "infoFoot">Contactanos</h5> </a>
           <a  href="/pages/Error404.html"
             ><h5  class = "infoFoot">Privacidad Y Legales</h5></a
           >
