--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -18,29 +18,29 @@
         <link rel="stylesheet" href="/css/contacto.css" />
       </head>
 <body>
-    <header>
-        <div class="navbar">
-          <div class="logo"> <a href="/index.html"><img src="/img/logo/TECH PNG.png" alt="" /></a></div>
-          <ul class="links">
-            <li><a href="">Contactanos</a></li>
-            <li><a href="/pages/administracion.html">Administracion</a></li>
-            <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
-          </ul>
-          <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
-          <div class="toggle-btn" onclick="openMenu()">
-            <i class="fa-solid fa-bars"></i>
-          </div>
-        </div>
-        <div class="dropdown_menu">
-          <li><a href="">Contacto</a></li>
-          <li><a href="/pages/administracion.html">Administracion</a></li>
-          <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
-          <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
-        </div>
-      </header>
+  <header>
+    <div class="navbar">
+      <div class="logo"> <a href="/index.html"><img src="/img/logo/TECH PNG.png" alt="" /></a></div>
+      <ul class="links">
+        <li><a href="/pages/Contacto.html">Contactanos</a></li>
+        <li><a href="/pages/administracion.html">Administracion</a></li>
+        <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
+      </ul>
+      <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
+      <div class="toggle-btn" onclick="openMenu()">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </div>
+    <div class="dropdown_menu">
+      <li><a href="">Contacto</a></li>
+      <li><a href="/pages/administracion.html">Administracion</a></li>
+      <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
+      <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
+    </div>
+  </header>
     <main>
-        <div class="container   ">
-            <div class="row">
+        <div class="container ">
+            <div class="row mt-5">
                 <div class="col">
                         <div class="conteiner">
                             <div class="row mb-2">
@@ -83,50 +83,50 @@
 
     </main>
     <footer class="text-light py-2">
-        <div class="row">
-          <div class="col-sm-12 col-md-4 d-flex justify-content-center mt-3">
-            <div id="footerlogo">
-              <a href="index.html"
-                ><img
-                  src="/img/logo/TECH PNG.png"
-                  alt="logo"
-                  width="100"
-              /></a>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-4 text-center mt-4 cols-responsive">
-            <a href="https://www.facebook.com/Disney" target="_blank"
-              ><i
-                class="fa-brands fa-facebook fa-2xl m-4"
-                style="color: #fffcfc"
-              ></i
-            ></a>
-            <a href="https://www.instagram.com/feria.americana.tucuman?igsh=MTY4MDZjZzhjOGZvNg%3D%3D" target="_blank"
-              ><i
-                class="fa-brands fa-instagram fa-2xl m-4 "
-                style="color: #fffcfc"
-              ></i
-            ></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"
-              ><i
-                class="fa-brands fa-twitter fa-2xl m-4 "
-                style="color: #fffcfc"
-              ></i
-            ></a>
-            <br />
-            <span>&copy;Derechos reservados</span>
-          </div>
-          <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
-            <a  href="/"><h5  class = "infoFoot">Contactanos</h5> </a>
-            <a  href="/pages/Error404.html"
-              ><h5  class = "infoFoot">Privacidad Y Legales</h5></a
-            >
-            <a class="foo" href="/Page/acercadenosotros.html"
-              ><h5  class = "infoFoot">Acerca de Nosotros</h5></a
-            >
+      <div class="row">
+        <div class="col-sm-12 col-md-4 d-flex justify-content-center mt-3">
+          <div id="footerlogo">
+            <a href="index.html"
+              ><img
+                src="/img/logo/TECH PNG.png"
+                alt="logo"
+                width="100"
+            /></a>
           </div>
         </div>
-      </footer>
+        <div class="col-sm-12 col-md-4 text-center mt-4 cols-responsive">
+          <a href="https://www.facebook.com/Disney" target="_blank"
+            ><i
+              class="fa-brands fa-facebook fa-2xl m-4"
+              style="color: #fffcfc"
+            ></i
+          ></a>
+          <a href="https://www.instagram.com/feria.americana.tucuman?igsh=MTY4MDZjZzhjOGZvNg%3D%3D" target="_blank"
+            ><i
+              class="fa-brands fa-instagram fa-2xl m-4 "
+              style="color: #fffcfc"
+            ></i
+          ></a>
+          <a href="https://twitter.com/?lang=es" target="_blank"
+            ><i
+              class="fa-brands fa-twitter fa-2xl m-4 "
+              style="color: #fffcfc"
+            ></i
+          ></a>
+          <br />
+          <span>&copy;Derechos reservados</span>
+        </div>
+        <div class="col-sm-12 col-md-4 text-center mt-3 cols-responsive" id="redes">
+          <a  href="/pages/Contacto.html"><h5  class = "infoFoot">Contactanos</h5> </a>
+          <a  href="/pages/Error404.html"
+            ><h5  class = "infoFoot">Privacidad Y Legales</h5></a
+          >
+          <a class="foo" href="/Page/acercadenosotros.html"
+            ><h5  class = "infoFoot">Acerca de Nosotros</h5></a
+          >
+        </div>
+      </div>
+    </footer>
       <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
