--- a/pages/producto.html
+++ b/pages/producto.html
@@ -42,7 +42,8 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="text-white text-center mt-4 fw-bold">Datos del producto</h1>
+                    <div class="mt-3"><h1 class="text-white text-center mt-4 fw-bold">Datos del producto</h1></div>
+                    <hr>
                 </div>
             </div>
             <div id="contenedor">
