Arreglos de ultimos detalles

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -51,7 +51,7 @@
                                     <h4 class="text-center text-white mb-3">Devoluciones: 381-000-000</h4>
                                     <h3 class="text-white text-center mb-3">⚫ Deja tu opinion ⚫ </h3>
                                     <hr style="color: white;">
-                                    <form action="">
+                                    <form>
                                         <div class="row mb-3">
                                             <div class="col">
                                                 <label for="nombre" class="text-white">Ingrese su nombre</label>
@@ -67,6 +67,13 @@
                                                 <label for="opinion" class="text-white">Deje su opinion aqui</label>
                                                 <textarea name="" id="opinion" class="form-control" placeholder="Escriba su opinion" cols="20" rows="5"></textarea>
                                             </div>
+                                        </div>
+                                        <div class="row">
+                                          <div class="col">
+                                            <div class="col">
+                                              <button type="submit" class="mt-2" id="boton-contact">Enviar</button>
+                                            </div>
+                                          </div>
                                         </div>
                                     </form>
                                 </div>
