--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="dropdown_menu">
-      <li><a href="">Contacto</a></li>
+      <li><a href="/pages/Contacto.html">Contacto</a></li>
       <li><a href="/pages/administracion.html">Administracion</a></li>
       <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
       <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
