--- a/pages/producto.html
+++ b/pages/producto.html
@@ -19,25 +19,25 @@
       </head>
   <body>
     <header>
-        <div class="navbar">
-          <div class="logo"> <a href="/index.html"><img src="/img/logo/TECH PNG.png" alt="" /></a></div>
-          <ul class="links">
-            <li><a href="/pages/Contacto.html">Contactanos</a></li>
-            <li><a href="/pages/administracion.html">Administracion</a></li>
-            <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
-          </ul>
-          <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
-          <div class="toggle-btn" onclick="openMenu()">
-            <i class="fa-solid fa-bars"></i>
-          </div>
-        </div>
-        <div class="dropdown_menu">
-          <li><a href="">Contacto</a></li>
+      <div class="navbar">
+        <div class="logo"> <a href="/index.html"><img src="/img/logo/TECH PNG.png" alt="" /></a></div>
+        <ul class="links">
+          <li><a href="/pages/Contacto.html">Contactanos</a></li>
           <li><a href="/pages/administracion.html">Administracion</a></li>
           <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
-          <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
+        </ul>
+        <a class="action-btn "  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButton">Login</a>
+        <div class="toggle-btn" onclick="openMenu()">
+          <i class="fa-solid fa-bars"></i>
         </div>
-      </header>
+      </div>
+      <div class="dropdown_menu">
+        <li><a href="/pages/Contacto.html">Contacto</a></li>
+        <li><a href="/pages/administracion.html">Administracion</a></li>
+        <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
+        <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
+      </div>
+    </header
       <main>
         <div class="container">
             <div class="row">
