--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -32,12 +32,12 @@
       </div>
     </div>
     <div class="dropdown_menu">
-      <li><a href="">Contacto</a></li>
+      <li><a href="/pages/Contacto.html">Contacto</a></li>
       <li><a href="/pages/administracion.html">Administracion</a></li>
       <li><a href="/pages/Carrito.html">Ver mi carrito</a></li>
       <li><a class="action-btn"  href="#ModalLogin" data-bs-target="#modalLogin" data-bs-toggle="modal" id="loginButtonDropdownMenu">Login</a></li>
     </div>
-  </header>
+  </header
     <main>
         <div class="container ">
             <div class="row mt-5">
